# Preflight

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  manifest.schema.json  pyproject.toml
.github/workflows/: ci.yml  lint.yml
scripts/: benchmark_warning_corpus.py
src/preflight/: __init__.py  __main__.py  cli.py  config.py  manifest.py  manifest.schema.json  scanner.py  schema.py  server.py  verify.py  warnings.py
tests/: test_manifest.py  test_scanner.py  test_schema.py  test_server.py  test_verify.py  test_warnings.py
