[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "preflight"
version = "0.1.0"
description = "Aggregate repo facts into AI-ready manifests (JSON + Markdown) with a local HTTP server."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Preflight contributors" }]
keywords = ["ai", "developer-tools", "context", "manifest"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
dependencies = ["PyYAML>=6.0.2"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
preflight = "preflight.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/preflight"]

[tool.hatch.build.targets.sdist]
include = ["src/preflight", "README.md", "pyproject.toml", "manifest.schema.json"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
